--- a/views/tmpl/admin/facility/facility.html
+++ b/views/tmpl/admin/facility/facility.html
@@ -229,9 +229,9 @@
 												<p>{{ facility.facility_device_count }} Devices &nbsp;|&nbsp; {{ facility.facility_user_count }} Users</p>
 											</md-card-content>
 											<div class="md-actions" layout="row" layout-align="center center">
-												<button class="btn btn-orange btn-border btn-rounded btnMargin" ui-sref="app.admin.facility.view-facility({facility_id:facility.facility_id})">View</button>
-												<button class="btn btn-success btn-border btn-rounded btnMargin" ui-sref="app.admin.facility.edit-facility({facility_id:facility.facility_id})">Edit</button>
-												<button class="btn btn-danger btn-border btn-rounded btnMargin" disabled ng-click="showConfirm($event)">Delete</button>
+												<a class="btn btn-orange btn-border btn-rounded btnMargin" ui-sref="app.admin.facility.view-facility({facility_id:facility.facility_id})">View</a>
+												<a class="btn btn-success btn-border btn-rounded btnMargin" ui-sref="app.admin.facility.edit-facility({facility_id:facility.facility_id})">Edit</a>
+												<a class="btn btn-danger btn-border btn-rounded btnMargin" disabled ng-click="showConfirm($event)">Delete</a>
 											</div>
 										</md-card>										
 									</md-content>
