session elika warehouse

--- a/elika-warehouse/views/header.html
+++ b/elika-warehouse/views/header.html
@@ -106,7 +106,8 @@
 			</a>
 			<ul class="dropdown-menu pull-right panel panel-default animated littleFadeInDown" role="menu">
 				<li><a ui-sref="app.profile-settings"><i class="fa fa-cog" aria-hidden="true"></i> Profile Settings</a></li>
-				<li><a ui-sref="core.login"><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a></li>
+				<li><a logout-btn><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a></li>
+				<!-- ui-sref="core.login"  -->
 			</ul>
 		</li>
 	</ul>
