--- a/elika-warehouse/styles/loading-bar.css
+++ b/elika-warehouse/styles/loading-bar.css
@@ -33,7 +33,7 @@
 
   background: #29d;
   position: fixed;
-  z-index: 10002;
+  z-index: 9999999;
   top: 0;
   left: 0;
   width: 100%;
@@ -95,7 +95,28 @@
   background-repeat: no-repeat;
 
 }
-
+.loader {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+    z-index: 10001;
+    text-align: center;
+   /*  -webkit-transition: all .5s ease;
+    -moz-transition: all .5s ease;
+    transition: all .5s ease; */
+    
+}
+.spinner {
+    width: 40px;
+    height: 40px;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    margin-left: -20px;
+    margin-top: -20px;
+ color:#ccc;
+}
 #loading-bar-spinner .spinner-icon {
   /* width: 14px;
   height: 14px;
