--- a/elika-warehouse/views/tmpl/inventory/edit-device.html
+++ b/elika-warehouse/views/tmpl/inventory/edit-device.html
@@ -106,7 +106,7 @@
 									</div>
 									<div class="form-group col-sm-6 col-md-6">
 										<label for="">Account Number/ICCID</label>
-										<input type="text" name="" id="" class="form-control" ng-model="device.device_account_no" number maxlength="16" placeholder="">
+										<input type="text" name="" id="" class="form-control" ng-model="device.device_account_no" number maxlength="16" placeholder="" required>
 									</div>
 								</div>
 								<div class="row">
@@ -123,11 +123,11 @@
 									
 									<div class="form-group col-sm-6 col-md-6">
 										<label for="">Phone Number</label>
-										<input type="text" name="" id="" class="form-control" ng-model="device.device_phone_no" pattern="^\+[1-9]{1}[0-9]{3,14}$" oninvalid="setCustomValidity('Please enter valid mobile number')" onchange="try{setCustomValidity('')}catch(e){}" placeholder="">
+										<input type="text" name="" id="" class="form-control" ng-model="device.device_phone_no" pattern="^\+[1-9]{1}[0-9]{3,14}$" oninvalid="setCustomValidity('Please enter valid mobile number')" onchange="try{setCustomValidity('')}catch(e){}" placeholder="" required>
 									</div>
 									<div class="form-group col-sm-6 col-md-6">
 										<label for="">Bluetooth Mac Id</label>
-										<input type="text" name="" id="" class="form-control" ng-model="device.device_mac_address" pattern="^([0-9A-F]{2}[:-]){5}([0-9A-F]{2})$" oninvalid="setCustomValidity('Please enter valid mac address')" onchange="try{setCustomValidity('')}catch(e){}" disabled>
+										<input type="text" name="" id="" class="form-control" ng-model="device.device_mac_address" pattern="^([0-9A-F]{2}[:-]){5}([0-9A-F]{2})$" oninvalid="setCustomValidity('Please enter valid mac address')" onchange="try{setCustomValidity('')}catch(e){}" disabled required>
 									</div>
 								</div>
 								<div class="row">
