resolved bugID 477, and made some changes in Recorded Feed Camera DVR UI and resolved Session related issues on Facility UI

--- a/views/tmpl/admin/user/edit-user.html
+++ b/views/tmpl/admin/user/edit-user.html
@@ -197,14 +197,14 @@
 												</div>
 											</div>
 											<div class="row" ng-controller="ActivebtnCtrl">
-												<div class="form-group col-sm-6 col-md-6">
-													<label for="">Password</label>
-													<input type="password" class="form-control" id="password" ng-model="editUser.password" ng-value="editUser.password" name="password" required>
-												</div>
-												<div class="form-group col-sm-6 col-md-6">
-													<label for="">Confirm Password</label>
-													<input type="password" name="cnf_pass" id="cnf_pass" ng-model="editUser.cnf_pass" name="cnf_pass" class="form-control">
-												</div>
+												<!--<div class="form-group col-sm-6 col-md-6">-->
+													<!--<label for="">Password</label>-->
+													<!--<input type="password" class="form-control" id="password" ng-model="editUser.password" ng-value="editUser.password" name="password" required>-->
+												<!--</div>-->
+												<!--<div class="form-group col-sm-6 col-md-6">-->
+													<!--<label for="">Confirm Password</label>-->
+													<!--<input type="password" name="cnf_pass" id="cnf_pass" ng-model="editUser.cnf_pass" name="cnf_pass" class="form-control">-->
+												<!--</div>-->
 												<div class="form-group col-sm-6 col-md-3">
 													<label for="">Status</label><br/>
 													<div class="btn-group btnrounded">
