--- a/views/tmpl/admin/camera/camera-dvr.html
+++ b/views/tmpl/admin/camera/camera-dvr.html
@@ -372,12 +372,12 @@
 
         if (!isChrome) {
             document.getElementById("vxg_media1 " + cameraID).innerHTML =
-                "<embed id='player' type='application/x-vlc-plugin' class='lv_player' name='player' target='rtsp://184.72.239.149/vod/mp4:BigBuckBunny_115k.mov' autoplay = 'yes' loop= 'yes' toolbar= false width= '100%' height= '480' />";
+                "<embed id='player' type='application/x-vlc-plugin' class='lv_player' name='player' target='"+videoUrl+"' autoplay = 'yes' loop= 'yes' toolbar= false width= '100%' height= '480' />";
             document.getElementById("player").setAttribute("id",
                 "player" + cameraID);
         } else {
             document.getElementById("vxg_media1" + cameraID).innerHTML =
-                '<div id= "vxg_media_player' + cameraID +'" class="vxgplayer" url= "rtsp://184.72.239.149/vod/mp4:BigBuckBunny_115k.mov" aspect-ratio latency= "3000000" autostart controls avsync> </div>';
+                '<div id= "vxg_media_player' + cameraID +'" class="vxgplayer" url= "'+videoUrl+'" aspect-ratio latency= "3000000" autostart controls avsync> </div>';
         }
     };
 </script>
