--- a/views/tmpl/admin/device/devices.html
+++ b/views/tmpl/admin/device/devices.html
@@ -110,7 +110,7 @@
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Registration Code</label>
-														<input type="text" maxlength="30" name="" id="" ng-model="device.registration_code" class="form-control" placeholder="" required>
+														<input type="text" name="" id="" ng-model="device.registration_code" class="form-control" placeholder="" required>
 													</div>
 												</div>
 												<div class="row" >
