--- a/views/tmpl/forgot-password.html
+++ b/views/tmpl/forgot-password.html
@@ -11,15 +11,19 @@
 		<div id="hpopup" class="container w-450 p-40 bg-white text-center login-box-shadow borderradius6">
 			<h2 class="login-h2 text-greensea">Forgot Your Password?</h2>
 			<p>Use the form below to reset your password.<br/><small>We will send password reset instructions to the email address associated with your account.</small></p>
-			<form name="form" class="form-validation mt-20" novalidate>
+			<form name="form" class="form-validation mt-20" ng-submit="submitForgetPassword(user)">
 				
 				<div class="form-group">
 					<input type="email" class="form-control underline-input" placeholder="Email Address" ng-model="user.email" required>
 				</div>
+
+				<div class="form-group">
+					<p style="text-align: center;color: #666;">---------------------------------------- OR ----------------------------------------</p>
+				</div>
 				
 				<div class="form-group">
-					<select id="selectedQuestion1" name="selectedQuestion1" class="form-control underline-input mb-20">
-						<option value="?" selected="selected">Select Secret Question</option>
+					<select id="selectedQuestion1" name="selectedQuestion1" class="form-control underline-input mb-20" ng-model="user.question">
+						<option value="" selected="selected">Select Secret Question</option>
 						<option value="1" label="What was your favorite place to visit as a child?">What was your favourite place to visit as a child?</option>
 						<option value="2" label="Who is your favorite actor, musician, or artist?">Who is your favorite actor, musician, or artist?</option>
 						<option value="3" label="What is the name of your favorite pet?">What is the name of your favorite pet?</option>
@@ -39,11 +43,11 @@
 				</div>
 				
 				<div class="form-group">
-					<input type="text" class="form-control underline-input" placeholder="Answer" ng-model="user.answer" required>
+					<input type="text" class="form-control underline-input" placeholder="Answer" ng-model="user.answer">
 				</div>
 				
 				<div class="form-group text-left mt-20">  
-					<button type="submit" class="btn btn-grey b-0 br-2 mt-10 m-0-auto" ng-click="login()" ng-disabled='form.$invalid'>Submit</button>
+					<button type="submit" class="btn btn-grey b-0 br-2 mt-10 m-0-auto"  ng-disabled='form.$invalid'>Submit</button>
 				</div>
 			</form>
 			<div class="bg-slategray dker seagreen wrap-reset negmargin40 mt-20">
@@ -57,7 +61,7 @@
 		var winw = $(window).width();
 	    var winh = $(window).height();
 		
-		$(window).on('resize',function(){location.reload();});
+		//$(window).on('resize',function(){location.reload();});
 		
 		if(winh>449 && winw > 1139) {
 			var popuph = document.getElementById('hpopup').offsetHeight;
