--- a/views/tmpl/create-new-password.html
+++ b/views/tmpl/create-new-password.html
@@ -10,18 +10,18 @@
 	<div class="page page-core page-login core-new">
 		<div id="hpopup" class="container w-450 p-40 bg-white text-center login-box-shadow borderradius6">
 			<h2 class="login-h2 text-greensea">Create New Password</h2>
-			<form name="form" class="form-validation mt-20" novalidate ng-controller="LoginCtrl">
+			<form name="form" class="form-validation mt-20" novalidate ng-submit="submitNewPassword(user)">
 			
 				<div class="form-group">
 					<input type="password" class="form-control underline-input" placeholder="New password" ng-model="user.password" required>
 				</div>
 				
 				<div class="form-group">
-					<input type="password" placeholder="Confirm Password" class="form-control underline-input" ng-model="user.confirmpassword" required>
+					<input type="password" placeholder="Confirm Password" class="form-control underline-input" ng-model="user.confirm_password" required>
 				</div>
 				
 				<div class="form-group text-left mt-20">  
-					<button type="submit" class="btn btn-grey b-0 br-2 mt-10 m-0-auto" ng-click="login()" ng-disabled='form.$invalid'>Submit</button>
+					<button type="submit" class="btn btn-grey b-0 br-2 mt-10 m-0-auto" ng-disabled='form.$invalid'>Submit</button>
 				</div>
 			</form>
 			<div class="bg-slategray dker seagreen wrap-reset negmargin40 mt-20">
@@ -35,7 +35,7 @@
 		var winw = $(window).width();
 	    var winh = $(window).height();
 		
-		$(window).on('resize',function(){location.reload();});
+		// $(window).on('resize',function(){location.reload();});
 		
 		if(winh>449 && winw > 1139) {
 			var popuph = document.getElementById('hpopup').offsetHeight;
