--- a/views/tmpl/otp.html
+++ b/views/tmpl/otp.html
@@ -10,7 +10,7 @@
 	<div class="page page-core page-login core-new">
 		<div id="hpopup" class="container w-450 p-40 bg-white text-center login-box-shadow borderradius6">
 			<h2 class="login-h2 text-greensea">One Time Password</h2>
-			<form name="form" class="form-validation mt-20" novalidate>
+			<form name="form" class="form-validation mt-20" ng-submit="submitOTP(user)" novalidate>
 			
 				<p class="help-block text-left" style="font-weight: 400; font-size: 16px; margin-bottom: 30px;">The OTP has been send on your e-mail address.</p>
 				
@@ -19,7 +19,7 @@
 				</div>
 				
 				<div class="form-group text-left mt-20">  
-					<button type="submit" class="btn btn-grey b-0 br-2 mt-10 m-0-auto" ng-click="login()" ng-disabled='form.$invalid'>Submit</button>
+					<button type="submit" class="btn btn-grey b-0 br-2 mt-10 m-0-auto"  ng-disabled='form.$invalid'>Submit</button>
 				</div>
 			</form>
 			<div class="bg-slategray dker seagreen wrap-reset negmargin40 mt-20">
@@ -33,7 +33,7 @@
 		var winw = $(window).width();
 	    var winh = $(window).height();
 		
-		$(window).on('resize',function(){location.reload();});
+		//$(window).on('resize',function(){location.reload();});
 		
 		if(winh>449 && winw > 1139) {
 			var popuph = document.getElementById('hpopup').offsetHeight;
