code optimization for Facility web UI (except User and Schedular module)

--- a/views/tmpl/admin/camera/camera-dvr.html
+++ b/views/tmpl/admin/camera/camera-dvr.html
@@ -284,7 +284,7 @@
 												</div>
 											</div>
 											<div class="row searchvideoitems ">
-												<div class="col-md-12 " ng-hide="searchSection=='reset' ">
+												<div class="col-md-12 " ng-hide="searchSection=='Reset' ">
 													<div class="row ">
 														<div class="col-md-4 ">
 															<ul class="tabs-menu ">
