--- a/views/header.html
+++ b/views/header.html
@@ -149,7 +149,7 @@
 			<ul class="dropdown-menu pull-right panel panel-default animated littleFadeInDown" role="menu">
 				<li><a ui-sref="app.admin.profile-settings"><i class="fa fa-cog" aria-hidden="true"></i> Profile Settings</a></li>
 				<li><a ui-sref="app.admin.help.faqs"><i class="fa fa-question" aria-hidden="true"></i> Help and FAQ's</a></li>
-				<li><a ui-sref="core.login"><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a></li>
+				<li><a logout-btn><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a></li>
 				<!-- logout-btn -->
 			</ul>
 		</li>
