--- a/views/tmpl/admin/activity.html
+++ b/views/tmpl/admin/activity.html
@@ -84,7 +84,7 @@
 			</div>			
 		</div>
 		
-		<div class="row" ng-controller="ActivityCtrl">
+		<div class="row">
 			<div class="col-sm-12 col-md-8 col-lg-9">
 				<section class="tile box-shadow" fullscreen="isFullscreen06">
 					<div class="tile-header dvd dvd-btm">
