--- a/views/tmpl/admin/facility/facility.html
+++ b/views/tmpl/admin/facility/facility.html
@@ -84,7 +84,7 @@
 			</div>			
 		</div>
 	
-		<div class="row" ng-controller="FacilityCtrl">
+		<div class="row">
 			<div class="col-md-12">
 				<section class="tile box-shadow">
 					<div class="tile-header dvd dvd-btm">
