integrated manage account api, resolved BugIDs: 484,457 and Omtimized code for User Module

--- a/views/tmpl/admin/device/dependent-devices.html
+++ b/views/tmpl/admin/device/dependent-devices.html
@@ -240,7 +240,7 @@
 											</div>
 										</md-card>										
 									</md-content>
-									<button class="btn btn-success btn-border btn-rounded m-0-auto f-wm" ng-hide="hideLoadMore" ng-click="loadMore()" ng-style="lmbtn">Load more</button>
+									<button ng-if="dependentDevice && dependentDevice.length>0" class="btn btn-success btn-border btn-rounded m-0-auto f-wm" ng-hide="hideLoadMore" ng-click="loadMore()" ng-style="lmbtn">Load more</button>
 								</div>
 							</div>
 						</div>
