--- a/elika-warehouse/views/tmpl/diagnostics-reports/monitor-diagnostics-and-reported-issues.html
+++ b/elika-warehouse/views/tmpl/diagnostics-reports/monitor-diagnostics-and-reported-issues.html
@@ -199,7 +199,7 @@
 											</div>
 										</md-card>										
 									</md-content>
-									<button class="btn btn-success btn-border btn-rounded m-0-auto f-wm" ng-click="loadMore()" ng-style="lmbtn">Load more</button>
+									<button ng-if="devices && devices.length>0" class="btn btn-success btn-border btn-rounded m-0-auto f-wm" ng-click="loadMore()" ng-style="lmbtn">Load more</button>
 								</div>
 							</div>
 						</div>
