--- a/views/tmpl/admin/door/doors.html
+++ b/views/tmpl/admin/door/doors.html
@@ -223,7 +223,7 @@
 											</div>
 										</md-card>										
 									</md-content>
-									<button ng-hide="hideLoadMore" class="btn btn-success btn-border btn-rounded m-0-auto f-wm" ng-click="listDoors()" ng-style="lmbtn">Load more</button>
+									<button ng-hide="hideLoadMore" ng-if="adoors && adoors.length>0" class="btn btn-success btn-border btn-rounded m-0-auto f-wm" ng-click="listDoors()" ng-style="lmbtn">Load more</button>
 								</div>
 							</div>
 						</div>
