--- a/views/tmpl/admin/profile-settings.html
+++ b/views/tmpl/admin/profile-settings.html
@@ -187,38 +187,23 @@
 									<div class="form-group legend">
 										<h4><strong>Security</strong> Questions</h4>
 									</div>
-									<form name="form1" role="form">
+									<form name="form1" role="form" ng-submit="changeSecurityQuestion()">
 										<div class="modal-body">
 											<div class="row">
 												<div class="col-xs-12 col-sm-6 col-md-6">
 													<div class="form-group overflow">
 														<label for="">Select Secret Question</label>
-														<select id="selectedQuestion1" name="selectedQuestion1" class="form-control">
-															<option value="?" selected="selected">Select Secret Question</option>
-															<option value="1" label="What was your favorite place to visit as a child?">What was your favourite place to visit as a child?</option>
-															<option value="2" label="Who is your favorite actor, musician, or artist?">Who is your favorite actor, musician, or artist?</option>
-															<option value="3" label="What is the name of your favorite pet?">What is the name of your favorite pet?</option>
-															<option value="4" label="In what city were you born?">In what city were you born?</option>
-															<option value="5" label="What high school did you attend?">What high school did you attend?</option>
-															<option value="6" label="What is the name of your first school?">What is the name of your first school?</option>
-															<option value="7" label="What is your favorite movie?">What is your favorite movie?</option>
-															<option value="8" label="What is your mother's maiden name?">What is your mother's maiden name?</option>
-															<option value="9" label="What street did you grow up on?">What street did you grow up on?</option>
-															<option value="10" label="What was the make of your first car?">What was the make of your first car?</option>
-															<option value="11" label="When is your anniversary?">When is your anniversary?</option>
-															<option value="12" label="What is your favorite color?">What is your favorite color?</option>
-															<option value="13" label="What is your father's middle name?">What is your father's middle name?</option>
-															<option value="14" label="What is the name of your first grade teacher?">What is the name of your first grade teacher?</option>
-															<option value="15" label="What was your high school mascot?">What was your high school mascot?</option>
+														<select id="selectedQuestion1" name="selectedQuestion1" class="form-control" ng-model="profileSettings.changeSecurityQuestions.sq_id" ng-options="sques.sq_id as sques.sq_question for sques in lstSecurityQuestions track by sques.sq_id">
+															<option value="">Select Secret Question</option>
 														</select>
 													</div>
 													<div class="form-group overflow">
 														<label for="">Answer</label>
-														<input type="text" name="" id="" class="form-control" value="">
+														<input type="text" name="" autocomplete="false" ng-model="profileSettings.changeSecurityQuestions.answer" class="form-control" value="">
 													</div>
 													<div class="form-group overflow">
 														<label for="">Current password</label>
-														<input type="password" name="" id="" class="form-control" value="">
+														<input type="password" name="" autocomplete="false" ng-model="profileSettings.changeSecurityQuestions.current_password" class="form-control" value="">
 													</div>
 												</div>
 											</div>
