--- a/views/tmpl/forgot-password.html
+++ b/views/tmpl/forgot-password.html
@@ -11,43 +11,14 @@
 		<div id="hpopup" class="container w-450 p-40 bg-white text-center login-box-shadow borderradius6">
 			<h2 class="login-h2 text-greensea">Forgot Your Password?</h2>
 			<p>Use the form below to reset your password.<br/><small>We will send password reset instructions to the email address associated with your account.</small></p>
-			<form name="form" class="form-validation mt-20" ng-submit="submitForgetPassword(user)">
+			<form name="form" class="form-validation mt-20" ng-submit="submitForgetPassword(user)" novalidate>
 				
 				<div class="form-group">
 					<input type="email" class="form-control underline-input" placeholder="Email Address" ng-model="user.email" required>
 				</div>
-
-				<div class="form-group">
-					<p style="text-align: center;color: #666;">---------------------------------------- OR ----------------------------------------</p>
-				</div>
-				
-				<div class="form-group">
-					<select id="selectedQuestion1" name="selectedQuestion1" class="form-control underline-input mb-20" ng-model="user.question">
-						<option value="" selected="selected">Select Secret Question</option>
-						<option value="1" label="What was your favorite place to visit as a child?">What was your favourite place to visit as a child?</option>
-						<option value="2" label="Who is your favorite actor, musician, or artist?">Who is your favorite actor, musician, or artist?</option>
-						<option value="3" label="What is the name of your favorite pet?">What is the name of your favorite pet?</option>
-						<option value="4" label="In what city were you born?">In what city were you born?</option>
-						<option value="5" label="What high school did you attend?">What high school did you attend?</option>
-						<option value="6" label="What is the name of your first school?">What is the name of your first school?</option>
-						<option value="7" label="What is your favorite movie?">What is your favorite movie?</option>
-						<option value="8" label="What is your mother's maiden name?">What is your mother's maiden name?</option>
-						<option value="9" label="What street did you grow up on?">What street did you grow up on?</option>
-						<option value="10" label="What was the make of your first car?">What was the make of your first car?</option>
-						<option value="11" label="When is your anniversary?">When is your anniversary?</option>
-						<option value="12" label="What is your favorite color?">What is your favorite color?</option>
-						<option value="13" label="What is your father's middle name?">What is your father's middle name?</option>
-						<option value="14" label="What is the name of your first grade teacher?">What is the name of your first grade teacher?</option>
-						<option value="15" label="What was your high school mascot?">What was your high school mascot?</option>
-					</select>
-				</div>
-				
-				<div class="form-group">
-					<input type="text" class="form-control underline-input" placeholder="Answer" ng-model="user.answer">
-				</div>
 				
 				<div class="form-group text-left mt-20">  
-					<button type="submit" class="btn btn-grey b-0 br-2 mt-10 m-0-auto"  ng-disabled='form.$invalid'>Submit</button>
+					<button type="submit" class="btn btn-grey b-0 br-2 mt-10 m-0-auto" ng-disabled='form.$invalid'>Submit</button>
 				</div>
 			</form>
 			<div class="bg-slategray dker seagreen wrap-reset negmargin40 mt-20">
@@ -56,23 +27,3 @@
 		</div>
 	</div>	
 </section>
-<script type="text/javascript">
-	$(document).ready(function() {
-		var winw = $(window).width();
-	    var winh = $(window).height();
-		
-		//$(window).on('resize',function(){location.reload();});
-		
-		if(winh>449 && winw > 1139) {
-			var popuph = document.getElementById('hpopup').offsetHeight;
-			var mtop = popuph - 45;
-			$('.w-450').css({
-				'position' : 'absolute',
-				'left' : '50%',
-				'top' : '50%',	        
-				'margin-top' : -mtop/2,
-				'margin-left' : -30,
-			});
-		}
-	});
-</script>
