--- a/views/tmpl/admin/profile-settings.html
+++ b/views/tmpl/admin/profile-settings.html
@@ -3,9 +3,7 @@
 		<a href back-button><i class="fa fa-arrow-left"></i> Back</a>
 	</div>
 	
-
 	<div class="pagecontent">
-
 		<div class="row">		
 			<div class="dnone card-container col-sm-3 col-md-3">
 				<div class="card">
@@ -24,9 +22,7 @@
 			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
 					<a ui-sref="app.admin.device.devices">
-
 					<div class="noback bg-blue">						
-
 						<div class="row">
 							<div class="col-xs-6 ta-r">
 								<div class="iconbx">
@@ -35,9 +31,7 @@
 							</div>
 							<div class="col-xs-6">	
 								<div class="itxt">							
-
 									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.primary_device}}</p>
-
 									<span class="text-lg">Devices</span>
 								</div>
 							</div>
@@ -49,9 +43,7 @@
 			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
 					<a ui-sref="app.admin.door.doors">
-
 					<div class="noback bg-slategray lt">						
-
 						<div class="row">
 							<div class="col-xs-6 ta-r">
 								<div class="iconbx">
@@ -60,9 +52,7 @@
 							</div>
 							<div class="col-xs-6">	
 								<div class="itxt">							
-
 									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.door}}</p>
-
 									<span class="text-lg">Doors</span>
 								</div>
 							</div>
@@ -74,9 +64,7 @@
 			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
 					<a ui-sref="app.admin.user.users">
-
 					<div class="noback bg-lightred">						
-
 						<div class="row">
 							<div class="col-xs-6 ta-r">
 								<div class="iconbx">
@@ -85,9 +73,7 @@
 							</div>
 							<div class="col-xs-6">
 								<div class="itxt">								
-
 									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.user}}</p>
-
 									<span class="text-lg">Users</span>
 								</div>	
 							</div>
@@ -121,9 +107,7 @@
 				</section>
 			</div>
 			
-
 			<div class="col-sm-12 col-md-8">
-
 				<section class="tile tile-simple"> 
 					<div class="tile-body p-0"> 
 						<uib-tabset class="tabs-dark"> 
@@ -168,15 +152,12 @@
 									<div class="form-group legend">
 										<h4><strong>Update</strong> Profile</h4>
 									</div>
-
 									<form name="form1" role="form" ng-submit="updateLoggedInUserProfile()">
-
 										<div class="modal-body">
 											<div class="row">
 												<div class="col-xs-12 col-sm-6 col-md-6">
 													<div class="form-group overflow">
 														<label for="">New Email</label>
-
 														<input type="email" name="" id="" ng-model="profileSettings.manageAccount.new_email" class="form-control" value="">
 													</div>
 													<div class="form-group overflow">
@@ -186,7 +167,6 @@
 													<div class="form-group overflow">
 														<label for="">Current password</label>
 														<input type="password" name="" id="" class="form-control" ng-model="profileSettings.manageAccount.current_password" value="">
-
 													</div>
 												</div>
 											</div>
@@ -207,42 +187,23 @@
 									<div class="form-group legend">
 										<h4><strong>Security</strong> Questions</h4>
 									</div>
-
 									<form name="form1" role="form" ng-submit="changeSecurityQuestion()">
-
 										<div class="modal-body">
 											<div class="row">
 												<div class="col-xs-12 col-sm-6 col-md-6">
 													<div class="form-group overflow">
 														<label for="">Select Secret Question</label>
-														<select id="selectedQuestion1" name="selectedQuestion1" class="form-control">
-															<option value="?" selected="selected">Select Secret Question</option>
-															<option value="1" label="What was your favorite place to visit as a child?">What was your favourite place to visit as a child?</option>
-															<option value="2" label="Who is your favorite actor, musician, or artist?">Who is your favorite actor, musician, or artist?</option>
-															<option value="3" label="What is the name of your favorite pet?">What is the name of your favorite pet?</option>
-															<option value="4" label="In what city were you born?">In what city were you born?</option>
-															<option value="5" label="What high school did you attend?">What high school did you attend?</option>
-															<option value="6" label="What is the name of your first school?">What is the name of your first school?</option>
-															<option value="7" label="What is your favorite movie?">What is your favorite movie?</option>
-															<option value="8" label="What is your mother's maiden name?">What is your mother's maiden name?</option>
-															<option value="9" label="What street did you grow up on?">What street did you grow up on?</option>
-															<option value="10" label="What was the make of your first car?">What was the make of your first car?</option>
-															<option value="11" label="When is your anniversary?">When is your anniversary?</option>
-															<option value="12" label="What is your favorite color?">What is your favorite color?</option>
-															<option value="13" label="What is your father's middle name?">What is your father's middle name?</option>
-															<option value="14" label="What is the name of your first grade teacher?">What is the name of your first grade teacher?</option>
-															<option value="15" label="What was your high school mascot?">What was your high school mascot?</option>
-
+														<select id="selectedQuestion1" name="selectedQuestion1" class="form-control" ng-model="profileSettings.changeSecurityQuestions.sq_id" ng-options="sques.sq_id as sques.sq_question for sques in lstSecurityQuestions track by sques.sq_id">
+															<option value="">Select Secret Question</option>
 														</select>
 													</div>
 													<div class="form-group overflow">
 														<label for="">Answer</label>
-														<input type="text" name="" id="" class="form-control" value="">
+														<input type="text" name="" autocomplete="false" ng-model="profileSettings.changeSecurityQuestions.answer" class="form-control" value="">
 													</div>
 													<div class="form-group overflow">
 														<label for="">Current password</label>
-														<input type="password" name="" id="" class="form-control" value="">
-
+														<input type="password" name="" autocomplete="false" ng-model="profileSettings.changeSecurityQuestions.current_password" class="form-control" value="">
 													</div>
 												</div>
 											</div>
