resolved bugs as told by anshi and made some code level changes in Usermodule

--- a/views/tmpl/admin/camera/camera-dvr.html
+++ b/views/tmpl/admin/camera/camera-dvr.html
@@ -84,7 +84,7 @@
 			</div>
 		</div>
 
-		<div class="row" ng-controller="CameraDVRCtrl">
+		<div class="row">
 			<div class="col-md-12">
 				<section class="tile box-shadow" fullscreen="isFullscreen06">
 					<div class="hometabs">
