--- a/views/tmpl/admin/user/add-user.html
+++ b/views/tmpl/admin/user/add-user.html
@@ -84,7 +84,7 @@
 			</div>			
 		</div>
 		
-		<div class="row" ng-controller="UserCtrl">
+		<div class="row">
 			<div class="col-sm-12 col-md-12"> 
 				<section class="tile tile-simple"> 
 					<div class="tile-body p-0"> 
