--- a/views/tmpl/signup.html
+++ b/views/tmpl/signup.html
@@ -10,7 +10,7 @@
 	<div class="page page-core page-login core-new">
 		<div id="hpopup" class="container w-450 p-40 bg-white text-center login-box-shadow borderradius6">
 			<h2 class="login-h2 text-greensea">Create a new account</h2>
-			<form name="form" class="form-validation mt-20" novalidate ng-controller="LoginCtrl">
+			<form name="form" class="form-validation mt-20" novalidate>
 				<div class="form-group">
 					<input type="text" class="form-control underline-input" placeholder="Full Name" ng-model="user.name" required>
 				</div>
