--- a/views/tmpl/admin/schedule/add-schedule.html
+++ b/views/tmpl/admin/schedule/add-schedule.html
@@ -84,7 +84,7 @@
 			</div>			
 		</div>
 	
-		<div class="row" ng-controller="AddScheduleCtrl">
+		<div class="row">
 			<div class="col-md-12"> 
 				<section class="tile tile-simple"> 
 					<div class="tile-header dvd dvd-btm">
