integrated APIS (delete facility and delete usergroup and resolved some issues)

--- a/views/tmpl/admin/device/dependent-devices.html
+++ b/views/tmpl/admin/device/dependent-devices.html
@@ -84,7 +84,7 @@
 			</div>			
 		</div>
 		
-		<div class="row" ng-controller="DependentDeviceCtrl">
+		<div class="row">
 			<div class="col-md-12">
 				<section class="tile box-shadow">
 					<div class="tile-header dvd dvd-btm">
@@ -184,7 +184,7 @@
 								<div class="col-sm-6 col-md-6">
 									<div class="row">
 										<div class="col-sm-8 col-md-9 search">
-											<input type="text" class="form-control ng-pristine ng-valid ng-touched" ng-model="searchText" ng-keyup="searchFunction($event)" placeholder="Search by text...." aria-invalid="false" style="">
+											<input type="text" class="form-control ng-pristine ng-valid ng-touched" ng-model="searchText" placeholder="Search by text...." aria-invalid="false" style="">
 											<button class="btn btn-default" type="button" ng-click="searchFunction()">Search</button>
 										</div>
 										<div class="col-sm-4 col-md-3 profilephoto csvupload">
