--- a/views/tmpl/admin/user/user-groups.html
+++ b/views/tmpl/admin/user/user-groups.html
@@ -311,7 +311,7 @@
 													</script>
 													<button ng-click="showEditForm(user.usergroup_id,user.usergroup_name,user.usergroup_facility_id, user.facility.facility_name)" class="btn btn-success btn-border btn-rounded btnMargin">Edit</button>
 												</div>												
-												<button class="btn btn-danger btn-border btn-rounded btnMargin" disabled ng-click="showConfirm($event, user.usergroup_id)">Delete</button>
+												<button class="btn btn-danger btn-border btn-rounded btnMargin" ng-click="showConfirm($event, user.usergroup_id)">Delete</button>
 											</div>
 										</md-card>										
 									</md-content>
