--- a/views/tmpl/admin/facility/view-facility.html
+++ b/views/tmpl/admin/facility/view-facility.html
@@ -101,7 +101,7 @@
 						<span class="text-muted">{{facility.facility_location}}</span>
 						<div class="mt-40">
 							<a ui-sref="app.admin.facility.edit-facility({facility_id:facility.facility_id})" class="btn btn-rounded-20 btn-sm btn-greensea">Edit Facility</a>
-							<button ng-click="showConfirm($event)" disabled class="btn btn-rounded-20 btn-sm bg-danger ml-5">Delete facility</button>
+							<button ng-click="showConfirm($event,facility.facility_id)" class="btn btn-rounded-20 btn-sm bg-danger ml-5">Delete facility</button>
 						</div>
 					</div> 
 					<div class="tile-body text-center p-0"> 
