--- a/views/tmpl/admin/user/user-groups-members.html
+++ b/views/tmpl/admin/user/user-groups-members.html
@@ -1,4 +1,4 @@
-<div class="page page-profile" ng-controller="UserGroupsDetailCtrl">
+<div class="page page-profile">
 	<div class="pageheader backpage">		
 		<a href back-button><i class="fa fa-arrow-left"></i> Back</a>
 	</div>
