--- a/views/tmpl/admin/profile-settings.html
+++ b/views/tmpl/admin/profile-settings.html
@@ -117,21 +117,21 @@
 									<div class="form-group legend">
 										<h4><strong>Change</strong> Password</h4>
 									</div>
-									<form name="form1" role="form">
+									<form name="form1" role="form" ng-submit="changeloggedInuserPassword()">
 										<div class="modal-body">
 											<div class="row">
 												<div class="col-xs-12 col-sm-6 col-md-6">
 													<div class="form-group overflow">
 														<label for="">Current Password</label>
-														<input type="password" name="" id="" class="form-control" value="">
+														<input type="password" name="" id="" required ng-model="profileSettings.changepassword.current_password" class="form-control" value="">
 													</div>
 													<div class="form-group overflow">
 														<label for="">New Password</label>
-														<input type="password" name="" id="" class="form-control" value="">
+														<input type="password" name="" id="" required ng-model="profileSettings.changepassword.new_password" class="form-control" value="">
 													</div>
 													<div class="form-group overflow">
 														<label for="">Confirm New Password</label>
-														<input type="password" name="" id="" class="form-control" value="">
+														<input type="password" name="" id="" required ng-model="profileSettings.changepassword.confirm_password" class="form-control" value="">
 													</div>
 												</div>
 											</div>
