--- a/views/tmpl/admin/user/edit-user.html
+++ b/views/tmpl/admin/user/edit-user.html
@@ -95,7 +95,7 @@
 				<section class="tile tile-simple">
 					<div class="leftdetail tile-widget p-30 text-center">
 						<div class="thumb thumb-xxll">
-							<img class="img-circle" src="images/users/2.jpg" alt="">
+							<img class="img-circle" ng-src="{{userData.user_photo}}" onerror="this.onError=null;this.src='images/users/2.jpg';" alt="">
 						</div>
 						<h4 class="mb-0"><strong>{{editUser.first_name}}</strong></h4>
 						<span class="text-muted">{{editUser.user_phone_no}}</span>
