--- a/views/tmpl/subadmin/schedule/holiday-schedule.html
+++ b/views/tmpl/subadmin/schedule/holiday-schedule.html
@@ -75,7 +75,7 @@
 			</div>			
 		</div>
 		
-		<div class="row" ng-controller="HolidayScheduleCtrl">
+		<div class="row">
 			<div class="col-md-12">
 				<section class="tile box-shadow" fullscreen="isFullscreen06">
 					<div class="tile-header dvd dvd-btm">
