changes in User group list and ad/edit user group

--- a/views/tmpl/admin/schedule/holiday-schedules.html
+++ b/views/tmpl/admin/schedule/holiday-schedules.html
@@ -417,7 +417,7 @@
 											</div>
 										</md-card>
 									</md-content>
-									<button class="btn btn-success btn-border btn-rounded m-0-auto f-wm" ng-click="getHolidayScheduleList()" ng-style="lmbtn">Load more</button>
+									<button class="btn btn-success btn-border btn-rounded m-0-auto f-wm" ng-click="loadMoreScheduleList()" ng-style="lmbtn">Load more</button>
 								</div>
 							</div>
 						</div>
