--- a/views/tmpl/admin/user/user-groups.html
+++ b/views/tmpl/admin/user/user-groups.html
@@ -145,7 +145,8 @@
 																			<!-- <select class="form-control selectpicker" ng-model="{{doorlist.schedulelist.is_access_allowed}}:{{doorlist.is_access_allowed}}" ng-change="addDoorScheduleUserGroup(schedule_id, doorlist.ud_id, this.selected)">
 																				<option value="{{item.id}}:{{item.is_access_allowed}}" ng-repeat="item in doorlist.schedulelist" >{{item.name}}</option>
 																			</select> -->
-																			<select class="form-control" ng-model="doorlist.is_access_allowed" ng-options="item.is_access_allowed as item.name for item in doorlist.schedulelist" ng-change="addDoorScheduleUserGroup(doorlist.schedule_id, doorlist.ud_id,doorlist.is_access_allowed,'add')"  >
+																			<select class="form-control" ng-model="updatedSchedule" ng-options="item as item.name for item in doorlist.schedulelist track by item" ng-change="addDoorScheduleUserGroup(updatedSchedule, doorlist.ud_id,doorlist.is_access_allowed,'add')"  >
+																			<option value="">Select Schedule</option>
 																			</select>
 																		</td>
 																	</tr>
@@ -292,7 +293,8 @@
 																					<td>{{doorlist.door_name}}</td>
 																					<td>
 																						<span class="loader" id="{{doorlist.ud_id}}" style="display: none;"><i class="fa fa-spinner fa-spin" aria-hidden="true"></i></span>
-																						<select class="form-control" ng-model="doorlist.is_access_allowed" ng-options="item.is_access_allowed as item.name for item in doorlist.schedulelist" ng-change="addDoorScheduleUserGroup(doorlist.schedule_id, doorlist.ud_id,doorlist.is_access_allowed,'edit')"  >
+																						<select class="form-control" ng-model="updatedSchedule" ng-options="item as item.name for item in doorlist.schedulelist track by item" ng-change="addDoorScheduleUserGroup(updatedSchedule, doorlist.ud_id,doorlist.is_access_allowed,'edit')"  >
+																						<option value="">Select Schedule</option>
 																						</select>
 																						
 																					</td>
