integrated holiday schedule view,edit and delete api,  resolved one issue and made some changes in userGroup

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -2217,7 +2217,7 @@ span.error {
     display: block;
     float: none;
 	margin: 20px auto 0;
-	overflow: hidden;
+	/*overflow: hidden;*/
 }
 
 .cameradetail p label {
