--- a/views/tmpl/admin/user/user-groups.html
+++ b/views/tmpl/admin/user/user-groups.html
@@ -293,7 +293,7 @@
 																					<td>{{doorlist.door_name}}</td>
 																					<td>
 																						<span class="loader" id="{{doorlist.ud_id}}" style="display: none;"><i class="fa fa-spinner fa-spin" aria-hidden="true"></i></span>
-																						<select class="form-control" ng-model="updatedSchedule" ng-options="item as item.name for item in doorlist.schedulelist track by item" ng-change="addDoorScheduleUserGroup(updatedSchedule, doorlist.ud_id,doorlist.is_access_allowed,'edit')"  >
+																						<select class="form-control"  ng-options="item.id as item.name for item in doorlist.schedulelist track by item.id" ng-model="doorlist.tempSchedulerId" ng-change="addDoorScheduleUserGroup(doorlist, doorlist.ud_id,doorlist.is_access_allowed,'edit')"  >
 																						<option value="">Select Schedule</option>
 																						</select>
 																						
